--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,3 +1,3 @@
-.vidframe{max-width:360px;max-height:360px;overflow:hidden;}
+.vidframe{max-width:360px;max-height:360px;overflow:hidden;text-align:center;}
 
 .vidframe video{margin: 0 auto;}
